--- a/cadastros-basicos/src/main/resources/config/application-dev.yml
+++ b/cadastros-basicos/src/main/resources/config/application-dev.yml
@@ -41,7 +41,7 @@ spring:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:postgresql://localhost:5432/cadastrosbasicos
         username: cadastrosbasicos
-        password:
+        password: cadastrosbasicos
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
@@ -172,3 +172,4 @@ jhipster:
 # ===================================================================
 
 application:
+spring.cloud.discovery.enabled: false
