--- a/cadastros-basicos/src/main/docker/postgresql.yml
+++ b/cadastros-basicos/src/main/docker/postgresql.yml
@@ -2,10 +2,10 @@ version: '2'
 services:
     cadastrosbasicos-postgresql:
         image: postgres:9.6.5
-        # volumes:
-        #     - ~/volumes/jhipster/cadastrosbasicos/postgresql/:/var/lib/postgresql/data/
+        volumes:
+            - ~/volumes/jhipster/cadastrosbasicos/postgresql/:/var/lib/postgresql/data/
         environment:
             - POSTGRES_USER=cadastrosbasicos
-            - POSTGRES_PASSWORD=
+            - POSTGRES_PASSWORD=cadastrosbasicos
         ports:
             - 5432:5432
