Configuração Docker frontend
Configurações atualizadas no arquivo de configuração do nginx (default.conf);
Adição de Jenkinsfile para o contexto de build do frontend
Ocorrência: BASIS-37762

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -24,8 +24,14 @@ server {
                 include         /etc/nginx/proxy.conf;
         }
 
-        location ${BASE_HREF}/sca2servico/api {
-                proxy_pass      http://${ENDERECO_API}/sca2servico/api;
+        location ${BASE_HREF}/cadastrosbasicos/api {
+                proxy_pass      http://${ENDERECO_API}/cadastrosbasicos/api;
                 include         /etc/nginx/proxy.conf;
         }
+
+	location ${BASE_HREF}/pacientes/api {
+                proxy_pass      http://${ENDERECO_API}/pacientes/api;
+                include         /etc/nginx/proxy.conf;
+        }
+
 }
