--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "nanoscroller": "0.8.7",
+    "ng-block-ui": "^1.0.4",
+    "ngx-toastr": "^8.4.0",
     "primeng": "^5.0.2",
     "quill": "^1.1.8",
     "rxjs": "^5.5.5",
