--- a/cadastros-basicos/src/main/resources/config/application-dev.yml
+++ b/cadastros-basicos/src/main/resources/config/application-dev.yml
@@ -58,11 +58,11 @@ spring:
     data:
         elasticsearch:
             cluster-name:
-            cluster-nodes:
-            properties:
-                path:
-                    logs: target/elasticsearch/log
-                    data: target/elasticsearch/data
+            cluster-nodes: localhost:9300
+        #    properties:
+         #       path:
+          #          logs: target/elasticsearch/log
+           #         data: target/elasticsearch/data
     mail:
         host: localhost
         port: 25
