--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@basis/angular-components": "^2.1.0",
     "@ngx-progressbar/core": "^4.0.1",
     "@ngx-progressbar/http": "^4.0.1",
+    "angular2-text-mask": "^9.0.0",
     "chart.js": "2.1.3",
     "core-js": "^2.4.1",
     "fullcalendar": "^3.1.0",
@@ -36,10 +37,12 @@
     "moment": "^2.17.1",
     "nanoscroller": "0.8.7",
     "ng-block-ui": "^1.0.4",
+    "ng-brazil": "^0.5.8",
     "ngx-toastr": "^8.4.0",
     "primeng": "^5.0.2",
     "quill": "^1.1.8",
     "rxjs": "^5.5.5",
+    "ts-mask": "^1.0.4",
     "web-animations-js": "^2.2.2",
     "zone.js": "^0.8.14"
   },
