--- a/cadastros-basicos/pom.xml
+++ b/cadastros-basicos/pom.xml
@@ -415,6 +415,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>1.4.23.Final</version>
+        </dependency>
 
 
     </dependencies>
