--- a/gateway/src/main/resources/config/application-dev.yml
+++ b/gateway/src/main/resources/config/application-dev.yml
@@ -39,9 +39,9 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/gatewaymadre
-        username: gatewaymadre
-        password:
+        url: jdbc:postgresql://localhost:5432/cadastrosbasicos
+        username: cadastrosbasicos
+        password: cadastrosbasicos
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
