--- a/gateway/src/main/resources/config/application-prod.yml
+++ b/gateway/src/main/resources/config/application-prod.yml
@@ -34,9 +34,9 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/gatewaymadre
+        url: jdbc:postgresql://madre.tst.basis.com.br:5432/gatewaymadre
         username: gatewaymadre
-        password:
+        password: gatewaymadre
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
