--- a/gateway/src/main/resources/config/application-prod.yml
+++ b/gateway/src/main/resources/config/application-prod.yml
@@ -34,7 +34,7 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://madre.tst.basis.com.br:5432/gatewaymadre
+        url: jdbc:postgresql://localhost:5432/gatewaymadre
         username: gatewaymadre
         password:
     jpa:
