--- a/gateway/src/main/resources/config/application-prod.yml
+++ b/gateway/src/main/resources/config/application-prod.yml
@@ -90,7 +90,7 @@ server:
     port: 8080
     compression:
         enabled: true
-        mime-types: text/html,text/xml,text/plain,text/css, application/javascript, application/json, application/pdf, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+        mime-types: text/html,text/xml,text/plain,text/css, application/javascript, application/json, application/pdf, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/octet-stream
         min-response-size: 1024
 
 # ===================================================================
