--- a/cadastros-basicos/src/main/docker/Dockerfile
+++ b/cadastros-basicos/src/main/docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM openjdk:8-jre-alpine
 
+RUN apk --no-cache add msttcorefonts-installer fontconfig && \
+    update-ms-fonts && \
+    fc-cache -f
+
 ENV SPRING_OUTPUT_ANSI_ENABLED=ALWAYS \
     JHIPSTER_SLEEP=0 \
     JAVA_OPTS=""
