--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "ng-block-ui": "^1.0.4",
     "ngx-mask": "^2.7.3",
     "ngx-toastr": "^8.4.0",
+    "node-sass": "^4.9.0",
     "primeng": "^5.0.2",
     "quill": "^1.1.8",
     "rxjs": "^5.5.5",
