BASIS-37215 - Cadastro Paciente - Configurando o banco

--- a/pacientes/src/main/docker/postgresql.yml
+++ b/pacientes/src/main/docker/postgresql.yml
@@ -6,6 +6,6 @@ services:
         #     - ~/volumes/jhipster/pacientes/postgresql/:/var/lib/postgresql/data/
         environment:
             - POSTGRES_USER=pacientes
-            - POSTGRES_PASSWORD=
+            - POSTGRES_PASSWORD=pacientes
         ports:
             - 5432:5432
