--- a/pacientes/pom.xml
+++ b/pacientes/pom.xml
@@ -662,7 +662,7 @@
                     <url>jdbc:postgresql://localhost:5432/pacientes</url>
                     <defaultSchemaName></defaultSchemaName>
                     <username>pacientes</username>
-                    <password>pacientes</password>
+                    <password>cadastrosbasicos</password>
                     <referenceUrl>hibernate:spring:br.com.basis.madre.pacientes.domain?dialect=org.hibernate.dialect.PostgreSQL82Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                     <verbose>true</verbose>
                     <logging>debug</logging>
