--- a/pacientes/src/main/resources/config/application-dev.yml
+++ b/pacientes/src/main/resources/config/application-dev.yml
@@ -41,7 +41,7 @@ spring:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:postgresql://localhost:5432/pacientes
         username: pacientes
-        password: pacientes
+        password: cadastrosbasicos
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
