--- a/gateway/src/main/resources/config/application.yml
+++ b/gateway/src/main/resources/config/application.yml
@@ -47,12 +47,13 @@ zuul: # those values must be configured depending on the application specific ne
 
 # See https://github.com/Netflix/Hystrix/wiki/Configuration
 hystrix:
-    command:
-        default:
-            execution:
-                isolation:
-                    thread:
-                        timeoutInMilliseconds: 10000
+  shareSecurityContext: true
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 10000
 
 management:
     security:
