--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,4 +1,8 @@
 {
     "singleQuote": true,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "semi": true,
+    "useTabs": false,
+    "tabWidth": 2,
+    "printWidth": 100
 }
