--- a/pacientes/.yo-rc.json
+++ b/pacientes/.yo-rc.json
@@ -5,7 +5,7 @@
     },
     "jhipsterVersion": "5.7.2",
     "applicationType": "microservice",
-    "baseName": "snffatura",
+    "baseName": "pacientes",
     "packageName": "br.com.basis.madre",
     "packageFolder": "br/com/basis/madre",
     "serverPort": "8082",
