Corrige problema gerado pela utilização do operador '~'

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,8 @@
         "@angular/router": "~8.2.0",
         "@ngx-progressbar/core": "^5.2.1",
         "@ngx-progressbar/http": "^5.2.1",
-        "@nuvem/angular-base": "~8.2.0",
-        "@nuvem/primeng-components": "~8.2.0",
+        "@nuvem/angular-base": "8.2.0",
+        "@nuvem/primeng-components": "8.2.0",
         "chart.js": "2.7.1",
         "core-js": "2.5.7",
         "fullcalendar": "4.0.0-alpha",
