--- a/chart/madre/templates/deployment.yaml
+++ b/chart/madre/templates/deployment.yaml
@@ -6,4 +6,4 @@
 ---
 {{- template "common.microservice" (dict "context" . "microservice" (merge .Values.internacao .Values.comum)) -}}
 ---
-{{- template "common.client" (dict "context" . "client" .Values.madrecliente "gateway" .Values.gateway) -}}
+{{- template "common.client" (dict "context" . "client" (merge .Values.madrecliente .Values.comum) "gateway" .Values.gateway) -}}
