Adicionar annotations do cert-manager - BASIS-119979

--- a/chart/madre/values.yaml
+++ b/chart/madre/values.yaml
@@ -13,6 +13,13 @@ madrecliente:
     locations:
     - pacientes
     - internacao
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/tls-acme: "true"
+  tls:
+  - hosts:
+    - madre.tst.basis.com.br
+    secretName: madretst-cert
 
 
 gateway:
