--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#009700",
-        "activityBar.activeBorder": "#2020ff",
-        "activityBar.background": "#009700",
+        "activityBar.activeBackground": "#1a1a1a",
+        "activityBar.activeBorder": "#606020",
+        "activityBar.background": "#1a1a1a",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#2020ff",
+        "activityBarBadge.background": "#606020",
         "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#006400",
-        "statusBar.border": "#006400",
+        "statusBar.background": "#000000",
+        "statusBar.border": "#000000",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#009700",
-        "titleBar.activeBackground": "#006400",
+        "statusBarItem.hoverBackground": "#1a1a1a",
+        "titleBar.activeBackground": "#000000",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.border": "#006400",
-        "titleBar.inactiveBackground": "#00640099",
+        "titleBar.border": "#000000",
+        "titleBar.inactiveBackground": "#00000099",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "darkgreen"
+    "peacock.color": "black"
 }
