--- a/farmacia/src/main/resources/config/application-dev.yml
+++ b/farmacia/src/main/resources/config/application-dev.yml
@@ -26,6 +26,11 @@ eureka:
     service-url:
       defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
 
+management:
+  health:
+    elasticsearch:
+      enabled: false
+
 spring:
   profiles:
     active: dev
@@ -63,6 +68,11 @@ spring:
       hibernate.cache.hazelcast.instance_name: farmacia
       hibernate.cache.use_minimal_puts: true
       hibernate.cache.hazelcast.use_lite_member: true
+  data:
+    elasticsearch:
+      properties:
+        path:
+          home: target/elasticsearch
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
     contexts: dev, faker
