--- a/farmacia/src/main/resources/config/application-prod.yml
+++ b/farmacia/src/main/resources/config/application-prod.yml
@@ -60,6 +60,13 @@ spring:
       hibernate.cache.hazelcast.instance_name: farmacia
       hibernate.cache.use_minimal_puts: true
       hibernate.cache.hazelcast.use_lite_member: true
+  data:
+    jest:
+      uri: http://localhost:9200
+  # see https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-nosql.html#boot-features-connecting-to-elasticsearch-jest
+  elasticsearch:
+    rest:
+      uris: http://localhost:9200
   # Replace by 'prod, faker' to add the faker context and have sample data loaded in production
   liquibase:
     contexts: prod
