--- a/farmacia/src/main/docker/app.yml
+++ b/farmacia/src/main/docker/app.yml
@@ -10,10 +10,16 @@ services:
       - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
       - SPRING_DATASOURCE_URL=jdbc:postgresql://farmacia-postgresql:5432/farmacia
       - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
+      - SPRING_DATA_JEST_URI=http://farmacia-elasticsearch:9200
+      - SPRING_ELASTICSEARCH_REST_URIS=http://farmacia-elasticsearch:9200
   farmacia-postgresql:
     extends:
       file: postgresql.yml
       service: farmacia-postgresql
+  farmacia-elasticsearch:
+    extends:
+      file: elasticsearch.yml
+      service: farmacia-elasticsearch
   jhipster-registry:
     extends:
       file: jhipster-registry.yml
