--- a/farmacia/src/main/resources/config/application.yml
+++ b/farmacia/src/main/resources/config/application.yml
@@ -103,6 +103,8 @@ management:
         auto-time-requests: true
 
 spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchAutoConfiguration,org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
   application:
     name: farmacia
   jmx:
