--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,45 +16,44 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~8.2.0",
-        "@angular/cdk": "~8.2.0",
-        "@angular/common": "~8.2.0",
-        "@angular/compiler": "~8.2.0",
-        "@angular/core": "~8.2.0",
-        "@angular/forms": "~8.2.0",
-        "@angular/platform-browser": "~8.2.0",
-        "@angular/platform-browser-dynamic": "~8.2.0",
-        "@angular/router": "~8.2.0",
+        "@angular/animations": "9.1.0",
+        "@angular/cdk": "9.1.0",
+        "@angular/common": "9.1.0",
+        "@angular/compiler": "9.1.0",
+        "@angular/core": "9.1.0",
+        "@angular/forms": "9.1.0",
+        "@angular/platform-browser": "9.1.0",
+        "@angular/platform-browser-dynamic": "9.1.0",
+        "@angular/router": "9.1.0",
+        "@fullcalendar/core": "4.4.0",
         "@ngx-progressbar/core": "^5.2.1",
         "@ngx-progressbar/http": "^5.2.1",
-        "@nuvem/angular-base": "8.2.0",
-        "@nuvem/primeng-components": "8.2.0",
+        "@nuvem/angular-base": "^9.1.1",
+        "@nuvem/primeng-components": "^9.1.1",
         "chart.js": "2.7.1",
-        "core-js": "2.5.7",
+        "classlist.js": "^1.1.20150312",
+        "core-js": "~3.5.0",
         "fullcalendar": "4.0.0-alpha",
         "intl": "1.2.5",
         "micro-dash": "^6.2.0",
         "moment": "^2.24.0",
         "primeicons": "^1.0.0",
-        "primeng": "~8.1.0",
+        "primeng": "9.0.0",
         "quill": "1.1.8",
-        "rxjs": "~6.4.0",
-        "rxjs-compat": "~6.4.0",
-        "s-ng-dev-utils": "^0.7.0",
-        "s-ng-utils": "^0.4.0",
-        "s-rxjs-utils": "^2.2.1",
+        "rxjs": "~6.5.0",
+        "rxjs-compat": "~6.5.0",
         "web-animations-js": "2.3.1",
-        "zone.js": "0.9.1"
+        "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.803.26",
-        "@angular/cli": "~8.2.0",
-        "@angular/compiler-cli": "~8.2.0",
-        "@angular/language-service": "~8.2.0",
+        "@angular-devkit/build-angular": "~0.901.0",
+        "@angular/cli": "9.1.0",
+        "@angular/compiler-cli": "9.1.0",
+        "@angular/language-service": "9.1.0",
         "@types/jasmine": "2.8.8",
         "@types/jasminewd2": "2.0.3",
         "@types/node": "10.14.10",
-        "codelyzer": "4.2.1",
+        "codelyzer": "^5.2.1",
         "jasmine-core": "2.99.1",
         "jasmine-spec-reporter": "4.2.1",
         "karma": "1.7.1",
@@ -62,9 +61,9 @@
         "karma-coverage-istanbul-reporter": "2.0.1",
         "karma-jasmine": "1.1.2",
         "karma-jasmine-html-reporter": "0.2.2",
-        "protractor": "5.3.2",
+        "protractor": "^5.4.4",
         "ts-node": "5.0.1",
         "tslint": "5.9.1",
-        "typescript": "~3.4.0"
+        "typescript": "^3.8.3"
     }
 }
