--- a/internacao/pom.xml
+++ b/internacao/pom.xml
@@ -668,7 +668,7 @@
                         <diffChangeLogFile>${project.basedir}/src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                         <driver>org.postgresql.Driver</driver>
                         <url>jdbc:postgresql://localhost:5432/internacao</url>
-                        <defaultSchemaName>public</defaultSchemaName>
+                        <defaultSchemaName></defaultSchemaName>
                         <username>internacao</username>
                         <password></password>
                         <referenceUrl>hibernate:spring:br.com.basis.madre.domain?dialect=org.hibernate.dialect.PostgreSQL95Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
