Conclusão para mensageria de cadastro de paciente usando Spring Cloud Stream com Kafka

--- a/pacientes/src/main/resources/config/application.yml
+++ b/pacientes/src/main/resources/config/application.yml
@@ -148,13 +148,10 @@ spring:
   cloud:
     stream:
       bindings:
-        listenFirst-in-0:
-          destination: recebe
-          group: group1
-        sendFirst-out-0:
-          destination: envia
+        pacienteSupplier-out-0:
+          destination: madre-paciente
     function:
-      definition: listenFirst;sendFirst
+      definition: pacienteSupplier
 server:
   servlet:
     session:
