Criação de Classe de evento para uso de mensageria - Spring Cloud Stream

--- a/pacientes/src/main/resources/config/application.yml
+++ b/pacientes/src/main/resources/config/application.yml
@@ -148,10 +148,12 @@ spring:
   cloud:
     stream:
       bindings:
+        triagemSupplier-out-0:
+          destination: madre-triagem
         pacienteSupplier-out-0:
           destination: madre-paciente
     function:
-      definition: pacienteSupplier
+      definition: triagemSupplier, pacienteSupplier
 server:
   servlet:
     session:
